- Refactored the factory base for readability and a bit more validation - Implement Repository Base AddAsync - Implement CreateNewPlayer controller action - Added an extra property Comment to the CreatePlayerRequestModel.cs - Swagger file updated for v2 - New swagger file added for v3 - Added new command property Comment - Added new validation rule for Comment property
